--- a/gini_table.tex
+++ b/gini_table.tex
@@ -1,182 +1,164 @@
 % latex table generated in R 4.2.3 by xtable 1.8-4 package
-% Tue Jan 30 10:59:32 2024
+% Wed Jun 19 14:10:10 2024
 \begin{longtable}{lrr}
   \hline
 city & gini & gvi \\ 
   \hline
-Bogota & 0.17 & 10.10 \\ 
-  Alexandria & 0.16 & 18.91 \\ 
-  Cairo & 0.15 & 16.85 \\ 
-  Kuwait City & 0.15 & 9.06 \\ 
-  Kinshasa & 0.14 & 19.45 \\ 
-  Lima & 0.14 & 6.60 \\ 
-  Osaka [Kyoto] & 0.14 & 18.91 \\ 
-  N'Djamena & 0.14 & 13.41 \\ 
-  Tehran & 0.14 & 13.61 \\ 
-  Istanbul & 0.14 & 20.43 \\ 
-  Athens & 0.14 & 16.22 \\ 
+Cape Town & 0.18 & 13.35 \\ 
+  Athens & 0.15 & 15.46 \\ 
+  Alexandria & 0.15 & 15.56 \\ 
+  Nairobi & 0.15 & 18.42 \\ 
+  Rabat & 0.14 & 13.76 \\ 
+  Lahore & 0.14 & 13.22 \\ 
+  Cairo & 0.14 & 12.47 \\ 
+  Osaka [Kyoto] & 0.14 & 16.01 \\ 
+  Los Angeles & 0.14 & 16.04 \\ 
+  Douala & 0.14 & 16.01 \\ 
+  Johannesburg & 0.13 & 20.65 \\ 
   Karachi & 0.13 & 12.85 \\ 
-  Kano & 0.13 & 18.15 \\ 
-  Nairobi & 0.13 & 25.64 \\ 
-  Harare & 0.13 & 30.52 \\ 
-  Cape Town & 0.13 & 15.75 \\ 
-  Guadalajara & 0.13 & 15.98 \\ 
-  Abidjan & 0.12 & 11.76 \\ 
-  Kumasi & 0.12 & 9.91 \\ 
-  Port Elizabeth & 0.12 & 24.07 \\ 
-  Mexico City & 0.12 & 14.87 \\ 
-  Windhoek & 0.12 & 19.08 \\ 
-  Amman & 0.12 & 14.10 \\ 
-  Helsinki & 0.12 & 19.97 \\ 
-  Buenos Aires & 0.12 & 15.07 \\ 
-  Glasgow & 0.12 & 6.35 \\ 
-  Guangzhou & 0.12 & 22.87 \\ 
-  Mogadishu & 0.12 & 12.85 \\ 
-  Suzhou & 0.12 & 12.97 \\ 
-  Izmir & 0.12 & 16.99 \\ 
-  Vienna & 0.12 & 23.38 \\ 
-  Yaounde & 0.12 & 16.34 \\ 
-  Delhi [New Delhi] & 0.11 & 16.58 \\ 
+  Tijuana & 0.13 & 12.28 \\ 
+  Dubai & 0.13 & 8.41 \\ 
+  Buenos Aires & 0.13 & 16.18 \\ 
+  Tehran & 0.13 & 12.25 \\ 
+  Jieyang & 0.13 & 17.26 \\ 
+  Kingston & 0.12 & 15.82 \\ 
+  Kinshasa & 0.12 & 19.57 \\ 
+  Bogota & 0.12 & 9.69 \\ 
+  Moscow & 0.12 & 13.39 \\ 
+  Mexico City & 0.12 & 12.13 \\ 
+  Bloemfontein & 0.12 & 16.42 \\ 
+  Guangzhou & 0.12 & 17.00 \\ 
+  Baghdad & 0.12 & 8.77 \\ 
+  San Salvador & 0.12 & 17.13 \\ 
+  Port Elizabeth & 0.12 & 20.21 \\ 
+  Abidjan & 0.12 & 12.67 \\ 
+  Novosibirsk & 0.12 & 9.70 \\ 
+  Delhi [New Delhi] & 0.12 & 15.03 \\ 
+  Yaounde & 0.12 & 19.25 \\ 
+  Port-au-Prince & 0.12 & 12.67 \\ 
   Guatemala City & 0.11 & 20.90 \\ 
-  Phoenix & 0.11 & 12.54 \\ 
-  Toluca & 0.11 & 15.59 \\ 
-  Lahore & 0.11 & 16.82 \\ 
+  Phoenix & 0.11 & 11.47 \\ 
+  Izmir & 0.11 & 15.20 \\ 
   Rio de Janeiro & 0.11 & 25.63 \\ 
-  Gold Coast & 0.11 & 21.22 \\ 
-  Lyon & 0.11 & 27.82 \\ 
-  Melbourne & 0.11 & 29.19 \\ 
-  Onitsha & 0.11 & 18.80 \\ 
-  Los Angeles & 0.11 & 17.02 \\ 
-  Puebla & 0.10 & 17.69 \\ 
-  Paris & 0.10 & 24.90 \\ 
-  Douala & 0.10 & 18.54 \\ 
-  Baghdad & 0.10 & 11.12 \\ 
-  New York & 0.10 & 28.28 \\ 
-  Belgrade & 0.10 & 25.70 \\ 
-  Dubai & 0.10 & 12.83 \\ 
-  Bandung & 0.10 & 29.81 \\ 
-  Riyadh & 0.10 & 15.17 \\ 
-  San Jose & 0.10 & 21.35 \\ 
-  Turin & 0.10 & 20.58 \\ 
-  Moscow & 0.10 & 16.66 \\ 
-  Seoul & 0.10 & 16.07 \\ 
-  Santiago de los Caballeros & 0.10 & 17.03 \\ 
-  Dhaka & 0.10 & 28.79 \\ 
-  Liverpool & 0.10 & 6.17 \\ 
-  Yangon & 0.10 & 26.97 \\ 
-  Novosibirsk & 0.10 & 13.86 \\ 
-  Surabaya & 0.10 & 32.74 \\ 
-  Ibadan & 0.10 & 9.93 \\ 
-  Ho Chi Minh City & 0.09 & 16.49 \\ 
-  Luanda & 0.09 & 12.03 \\ 
-  Jieyang & 0.09 & 23.19 \\ 
-  Dar es Salaam & 0.09 & 27.57 \\ 
-  Tunis & 0.09 & 15.83 \\ 
-  Santo Domingo & 0.09 & 15.12 \\ 
-  Jeddah & 0.09 & 12.05 \\ 
-  Johannesburg & 0.09 & 22.89 \\ 
-  Newcastle & 0.09 & 26.05 \\ 
-  Barcelona & 0.09 & 16.17 \\ 
-  Mumbai & 0.09 & 18.53 \\ 
+  San Jose & 0.11 & 17.47 \\ 
+  Damascus & 0.11 & 11.59 \\ 
+  Riyadh & 0.11 & 10.19 \\ 
+  Harare & 0.11 & 28.14 \\ 
+  Naples & 0.11 & 20.23 \\ 
+  Ibadan & 0.11 & 14.06 \\ 
+  Kumasi & 0.11 & 14.51 \\ 
+  Brussels & 0.11 & 22.97 \\ 
+  Tokyo & 0.11 & 14.10 \\ 
+  Casablanca & 0.11 & 11.27 \\ 
+  Monterrey & 0.10 & 12.37 \\ 
+  Paris & 0.10 & 22.80 \\ 
+  Tunis & 0.10 & 9.98 \\ 
+  Dallas & 0.10 & 19.03 \\ 
+  Seoul & 0.10 & 14.08 \\ 
+  Vienna & 0.10 & 24.01 \\ 
+  Lyon & 0.10 & 24.18 \\ 
+  Madrid & 0.10 & 14.18 \\ 
+  Ankara & 0.10 & 15.49 \\ 
+  Accra & 0.10 & 13.58 \\ 
+  Valencia & 0.10 & 12.73 \\ 
+  Barcelona & 0.10 & 15.72 \\ 
+  Brazzaville & 0.10 & 15.20 \\ 
+  Stockholm & 0.10 & 14.50 \\ 
+  Pretoria & 0.10 & 27.85 \\ 
+  Ho Chi Minh City & 0.10 & 17.13 \\ 
+  Birmingham & 0.10 & 9.46 \\ 
+  N'Djamena & 0.09 & 12.81 \\ 
+  Toluca & 0.09 & 11.06 \\ 
+  Kano & 0.09 & 14.66 \\ 
+  Suzhou & 0.09 & 14.36 \\ 
+  Hamburg & 0.09 & 16.88 \\ 
+  Jeddah & 0.09 & 10.25 \\ 
+  London & 0.09 & 21.99 \\ 
+  Sydney & 0.09 & 25.20 \\ 
+  Evaton & 0.09 & 16.25 \\ 
+  Windhoek & 0.09 & 15.17 \\ 
   Jakarta & 0.09 & 32.19 \\ 
-  Rabat & 0.09 & 15.39 \\ 
-  Kingston & 0.09 & 22.17 \\ 
-  Tokyo & 0.09 & 13.05 \\ 
-  Hanoi & 0.09 & 19.99 \\ 
-  Monterrey & 0.09 & 15.89 \\ 
-  Belo Horizonte & 0.09 & 19.41 \\ 
-  Bengaluru & 0.08 & 23.34 \\ 
-  Beijing & 0.08 & 11.78 \\ 
-  Hamburg & 0.08 & 21.38 \\ 
-  Brisbane & 0.08 & 27.26 \\ 
-  Bloemfontein & 0.08 & 21.00 \\ 
-  San Salvador & 0.08 & 27.67 \\ 
-  Kolkata & 0.08 & 28.38 \\ 
-  Shanghai & 0.08 & 13.95 \\ 
-  Lusaka & 0.08 & 23.91 \\ 
-  Naples & 0.08 & 24.15 \\ 
-  Dallas & 0.08 & 19.40 \\ 
-  Berlin & 0.08 & 19.42 \\ 
-  Addis Ababa & 0.08 & 16.98 \\ 
-  Toronto & 0.08 & 22.98 \\ 
-  Recife & 0.08 & 21.90 \\ 
-  Hyderabad & 0.08 & 18.26 \\ 
-  London & 0.08 & 27.62 \\ 
-  Madrid & 0.08 & 14.13 \\ 
-  Sydney & 0.08 & 26.15 \\ 
-  Chengdu & 0.08 & 16.57 \\ 
-  Ankara & 0.08 & 16.59 \\ 
-  Kyiv & 0.08 & 19.68 \\ 
-  Tijuana & 0.08 & 14.00 \\ 
-  Tripoli & 0.08 & 14.63 \\ 
-  Dakar & 0.08 & 9.77 \\ 
-  Saint Petersburg & 0.08 & 12.31 \\ 
-  Pretoria & 0.08 & 27.95 \\ 
-  Port-au-Prince & 0.08 & 15.19 \\ 
-  Kuala Lumpur & 0.08 & 31.19 \\ 
-  Dublin & 0.08 & 5.66 \\ 
-  Casablanca & 0.08 & 13.74 \\ 
+  Copenhagen & 0.09 & 15.46 \\ 
+  Lisbon & 0.09 & 13.44 \\ 
+  Berlin & 0.09 & 18.41 \\ 
+  Manchester & 0.09 & 5.94 \\ 
+  Leeds & 0.09 & 6.03 \\ 
+  Quezon City [Manila] & 0.09 & 21.96 \\ 
+  Santiago de los Caballeros & 0.09 & 14.64 \\ 
+  Dar es Salaam & 0.09 & 24.33 \\ 
+  Puebla & 0.08 & 12.39 \\ 
+  Christchurch & 0.08 & 20.45 \\ 
+  Algiers & 0.08 & 11.90 \\ 
+  Beijing & 0.08 & 11.38 \\ 
+  Amman & 0.08 & 10.72 \\ 
+  Rotterdam [The Hague] & 0.08 & 22.17 \\ 
+  Santiago & 0.08 & 10.10 \\ 
+  Faiyum & 0.08 & 16.57 \\ 
+  León & 0.08 & 12.26 \\ 
+  Medellín & 0.08 & 13.93 \\ 
+  Glasgow & 0.08 & 5.99 \\ 
+  Melbourne & 0.08 & 21.04 \\ 
+  Shanghai & 0.08 & 15.12 \\ 
+  Belgrade & 0.08 & 24.49 \\ 
+  Hanoi & 0.08 & 19.69 \\ 
+  Rome & 0.08 & 21.39 \\ 
+  Turin & 0.08 & 20.83 \\ 
+  Newcastle & 0.08 & 24.50 \\ 
+  Klipgat & 0.08 & 19.51 \\ 
   Bangkok & 0.08 & 18.93 \\ 
-  Christchurch & 0.07 & 25.77 \\ 
-  Perth & 0.07 & 20.33 \\ 
-  Budapest & 0.07 & 25.50 \\ 
-  Houston & 0.07 & 19.54 \\ 
-  Brussels & 0.07 & 27.10 \\ 
-  Rotterdam [The Hague] & 0.07 & 21.64 \\ 
-  Santiago & 0.07 & 11.18 \\ 
-  Tsakane & 0.07 & 20.35 \\ 
-  Rome & 0.07 & 24.20 \\ 
-  Quezon City [Manila] & 0.07 & 23.83 \\ 
-  Manchester & 0.07 & 6.50 \\ 
-  Faiyum & 0.07 & 21.77 \\ 
-  Durban & 0.07 & 32.59 \\ 
-  Birmingham & 0.07 & 10.61 \\ 
-  Singapore & 0.07 & 26.15 \\ 
-  Cologne & 0.07 & 25.71 \\ 
-  Klipgat & 0.07 & 24.84 \\ 
-  Milan & 0.07 & 25.15 \\ 
-  Fortaleza & 0.07 & 19.26 \\ 
-  Auckland & 0.06 & 32.70 \\ 
-  Lisbon & 0.06 & 15.99 \\ 
-  Garoua & 0.06 & 13.80 \\ 
-  Miami & 0.06 & 21.75 \\ 
-  Kampala & 0.06 & 35.01 \\ 
-  Ouagadougou & 0.06 & 9.03 \\ 
+  Adelaide & 0.08 & 17.84 \\ 
+  Hyderabad & 0.08 & 18.06 \\ 
+  Ciudad Juárez & 0.08 & 7.64 \\ 
+  Kuwait City & 0.07 & 6.49 \\ 
+  Budapest & 0.07 & 25.36 \\ 
+  Dakar & 0.07 & 9.65 \\ 
+  Ouagadougou & 0.07 & 9.65 \\ 
+  Tripoli & 0.07 & 12.82 \\ 
+  Addis Ababa & 0.07 & 15.42 \\ 
+  Lubumbashi & 0.07 & 17.46 \\ 
+  Luanda & 0.07 & 11.89 \\ 
+  Fez & 0.07 & 10.71 \\ 
+  Lima & 0.07 & 7.03 \\ 
+  Cologne & 0.07 & 25.45 \\ 
+  Kyiv & 0.07 & 20.21 \\ 
+  Durban & 0.07 & 26.10 \\ 
+  Dublin & 0.07 & 5.62 \\ 
+  Miami & 0.07 & 20.56 \\ 
+  Milan & 0.07 & 22.12 \\ 
+  Bengaluru & 0.07 & 21.41 \\ 
+  Liverpool & 0.07 & 5.21 \\ 
+  Mumbai & 0.06 & 16.55 \\ 
+  Bucharest & 0.06 & 19.59 \\ 
+  Minsk & 0.06 & 13.37 \\ 
+  Chengdu & 0.06 & 18.98 \\ 
   Chicago & 0.06 & 22.46 \\ 
-  Valencia & 0.06 & 15.84 \\ 
-  Lagos & 0.06 & 10.50 \\ 
-  Lubumbashi & 0.06 & 17.76 \\ 
-  Bucharest & 0.06 & 15.95 \\ 
-  Stockholm & 0.06 & 18.54 \\ 
-  Antananarivo & 0.06 & 23.71 \\ 
-  Minsk & 0.05 & 16.63 \\ 
-  Evaton & 0.05 & 19.39 \\ 
-  Leeds & 0.05 & 6.56 \\ 
-  Copenhagen & 0.05 & 19.84 \\ 
-  Dortmund & 0.05 & 26.92 \\ 
-  Maputo & 0.05 & 23.24 \\ 
-  Munich & 0.05 & 28.65 \\ 
-  Accra & 0.05 & 9.17 \\ 
-  Chennai & 0.05 & 21.99 \\ 
-  Bamako & 0.05 & 10.44 \\ 
-  Khartoum & 0.05 & 14.25 \\ 
-  Adelaide & 0.05 & 20.24 \\ 
-  Algiers & 0.05 & 13.38 \\ 
+  Dortmund & 0.06 & 24.57 \\ 
+  Perth & 0.06 & 18.23 \\ 
+  Kharkiv & 0.06 & 22.33 \\ 
+  Gold Coast & 0.06 & 23.11 \\ 
+  Auckland & 0.06 & 24.49 \\ 
+  Kigali & 0.06 & 26.86 \\ 
+  Antananarivo & 0.06 & 19.12 \\ 
+  Beni & 0.05 & 26.40 \\ 
+  Garoua & 0.05 & 15.95 \\ 
+  Yangon & 0.05 & 25.18 \\ 
+  Bamako & 0.05 & 14.54 \\ 
+  Tsakane & 0.05 & 15.70 \\ 
+  Onitsha & 0.05 & 22.89 \\ 
+  Maputo & 0.05 & 21.77 \\ 
+  Brisbane & 0.05 & 26.31 \\ 
+  Warsaw & 0.05 & 20.79 \\ 
+  Hillcrest & 0.04 & 24.20 \\ 
   Suva & 0.04 & 33.46 \\ 
-  Hillcrest & 0.04 & 35.12 \\ 
-  Kharkiv & 0.04 & 25.84 \\ 
-  Brazzaville & 0.04 & 16.41 \\ 
-  Kigali & 0.04 & 29.69 \\ 
+  Katowice & 0.04 & 21.60 \\ 
+  Khartoum & 0.04 & 12.91 \\ 
+  Gonaïves & 0.04 & 11.39 \\ 
   Port of Spain & 0.04 & 13.12 \\ 
-  Katowice & 0.04 & 22.94 \\ 
-  Warsaw & 0.03 & 22.52 \\ 
-  Fez & 0.03 & 13.83 \\ 
-  Mbuji-Mayi & 0.02 & 28.34 \\ 
-  Beni & 0.01 & 29.77 \\ 
-  Mendi & 0.00 & 26.11 \\ 
-  Port Moresby &  & 35.16 \\ 
+  São Paulo & 0.04 & 17.77 \\ 
+  Mbuji-Mayi & 0.02 & 29.39 \\ 
+  Mendi & 0.02 & 24.53 \\ 
    \hline
 \hline
-\caption{Gini indexes of GVI exposure in 2022} 
+\caption{Gini indexes of GVI exposure to the residential population, 2016-2023 average} 
 \label{tab:gini}
 \end{longtable}
